Add App class and create it by Boost.DI

--- a/exploreBot/app/CMakeLists.txt
+++ b/exploreBot/app/CMakeLists.txt
@@ -1,4 +1,7 @@
+include_directories("../extern/dependencyInjection")
+
 add_executable(${CMAKE_PROJECT_NAME}.elf
+    App.cpp
     main.cpp
     stm32f4xx_hal_msp.c
     stm32f4xx_it.c
