--- a/exploreBot/CMakeLists.txt
+++ b/exploreBot/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
  
-project(ExploreBot C CXX ASM)
+project(ExploreBot LANGUAGES C CXX ASM)
 
 # for startup code written by ST in assembly
 enable_language(ASM-ATT)
@@ -10,9 +10,20 @@ enable_language(ASM-ATT)
 # "platform" dependent, where by platform I mean STM32F4.
 add_definitions(-DHSE_VALUE=8000000)
 
+#include(FetchContent)
+
+## DI
+#FetchContent_Declare(
+#  di
+#  GIT_REPOSITORY https://github.com/boost-ext/di.git
+#  GIT_TAG        1.2.0
+#)
+#FetchContent_MakeAvailable(di)
+
 include_directories("app")
 
 add_subdirectory(extern)
+add_subdirectory(lib)
 #add_subdirectory(include)
 #add_subdirectory(src)
 add_subdirectory(app)
