--- a/exploreBot/include/CMakeLists.txt
+++ b/exploreBot/include/CMakeLists.txt
@@ -1,7 +1,5 @@
-add_library("include" STATIC
-    main.h
-    stm32f4xx_hal_conf.h
-    stm32f4xx_it.h
-)
+add_subdirectory(exploreBot)
 
-target_include_directories(include PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+#include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
+#target_include_directories(include PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
