Change tests for class InterruptsHandlerCaller>. Now they check that the correct handler is called (#4)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,6 +33,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 #add_subdirectory(app)
 add_executable(${CMAKE_PROJECT_NAME}
     main.cpp
+    mock/functionality/appMode/AppModeMock.hpp
     mock/functionality/appModeChange/AppModeChangerMock.hpp
     lib/functionality/InterruptHandling/InterruptsHandlerCallerTest.cpp
 )
